all cards flip independently. Fixed some issues with CSS on Safari

--- a/style.css
+++ b/style.css
@@ -30,17 +30,25 @@ h1 {
 
 
 .card {
-    transition: transform 1s;
+    -webkit-transition: transform 1.5s;
+    -ms-transition: transform 1.5s;
+    transition: transform 1.5s;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
 }
 
 
 
 .card-face {
+    -ms-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
 
 .card.flipped {
+    -webkit-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
@@ -49,6 +57,8 @@ h1 {
 }
   
 .back {
+    -webkit-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
     text-align: justify;
     background-color: #f1f1f1;
@@ -257,7 +267,7 @@ h1 {
     opacity: 0; /*hide this*/
     z-index: 2; /* and place it over the hamburger */
     
-    /* -webkit-touch-callout: none; */
+    -webkit-touch-callout: none;
     }
 
     #menuToggle span
